# project/routes/players.js
@@ -1,18 +1,20 @@
 var express = require("express");
 var router = express.Router();
 const players_utils = require("./utils/players_utils");
+var all_players = null
+
+router.use(async(req, res, next) => {
+    if (all_players == null)
+        all_players = await players_utils.get_all_players_in_season();
+    next();
+})
+
 
 router.get("/search", async(req, res, next) => {
-    let data = []
     let keyword = req.query.keyword;
     try {
-        const all_players = await players_utils.search_players_by_name(keyword);
-        // res.send(all_teams);
-        all_players.map((player) => data.push({
-            player_id: player.player_id,
-            player_name: player.fullname
-        }));
-        res.status(200).send(data);
+        const relevant_players = await players_utils.search_players_by_name(keyword, all_players);
+        res.status(200).send(relevant_players);
     } catch (error) {
         next(error);
     }
